@@ -1,6 +1,6 @@
 {
 	"snmp" : [
-		{ "community":"superpublic",	"ver":2 },
+		{ "community":"private",	"ver":2 },
 		{ "community":"public",		"ver":2 }
 	],
 	"domains" : [
@@ -12,5 +12,9 @@
 	],
 	"subnets" : [
 		"10.0.0.0/8"
-	]
+	],
+	"graph" : {
+		"node_text_size" : 10,
+		"link_text_size" : 9
+	}
 }
