@@ -1,1 +1,1 @@
-__version__ = "0.5"
+__version__ = "0.6a"
